--- a/templates/user_login.html
+++ b/templates/user_login.html
@@ -7,13 +7,13 @@ content %}
     <h1 class="text-center mt-1 t4 mb-4">User Login</h1>
     <form action="/login" method="post">
       <div class="form-group mb-3">
-        <h5 for="number" class="from-label text-white t4">Phone Number:</h5>
+        <h5 for="number" class="from-label text-white t4">Username:</h5>
         <input
           type="text"
-          name="number"
+          name="name"
           class="nm form-control rounded w-100"
           id="number"
-          placeholder="Enter phone number"
+          placeholder="Enter Username"
           required
         />
       </div>
