--- a/templates/create_user.html
+++ b/templates/create_user.html
@@ -1,12 +1,12 @@
-{% extends 'base.html' %} {% block title %}Create User{% endblock %} {% block
-content %}
+{% extends 'index_base.html' %} {% block title %}Create User{% endblock %} {%
+block content %}
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-6 bgc-2 p-4 rounded">
       <h2 class="text-center mb-3">Create Account</h2>
 
       <form action="/user/create" class="d-flex flex-column" method="POST">
-        <div class="mb-1">
+        <div class="my-3">
           <input
             type="text"
             class="form-control"
@@ -17,7 +17,7 @@ content %}
           />
         </div>
 
-        <div class="mb-1">
+        <div class="mb-3">
           <input
             type="number"
             class="form-control"
@@ -28,7 +28,7 @@ content %}
           />
         </div>
 
-        <div class="mb-1">
+        <div class="mb-3">
           <input
             type="email"
             class="form-control"
@@ -39,7 +39,7 @@ content %}
           />
         </div>
 
-        <div class="mb-3">
+        <div class="mb-5">
           <input
             type="password"
             class="form-control"
